weather api and various fixes

--- a/index.html
+++ b/index.html
@@ -8,7 +8,18 @@
       href="https://unpkg.com/maplibre-gl@2.1.1/dist/maplibre-gl.css"
       rel="stylesheet"
     />
-    <title>Vite App</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://api.tiles.mapbox.com/mapbox-gl-js/v7.0.7/mapbox-gl.css"
+      rel="stylesheet"
+    />
+
+    <title>Weather App</title>
   </head>
   <body>
     <div id="root"></div>
