--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap"
       rel="stylesheet"
     />
-    <link
+    <!-- <link
       href="https://api.tiles.mapbox.com/mapbox-gl-js/v7.0.7/mapbox-gl.css"
       rel="stylesheet"
-    />
+    /> -->
 
     <title>Weather App</title>
   </head>
